Language tag typo corrections.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -77,7 +77,7 @@
     "section-changes-to-your-privacy-policy-header": "Changes Notice",
     "section-changes-to-your-privacy-policy-p1": "We reserve the right to make changes to this Privacy Policy at any time. We will notify you of any\n material changes by posting the updated Privacy Policy on our website. Your continued use of our\n website after any such changes constitutes your acceptance of the revised Privacy Policy.",
     "section-contact-us-header": "Contact Us",
-    "section-content-us-p1": "If you have any questions about this Privacy Policy or our practices, please contact us."
+    "section-contact-us-p1": "If you have any questions about this Privacy Policy or our practices, please contact us."
   },
   "content-page": {
     "sidebar-heading-text": "Navigation",
