--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -77,7 +77,7 @@
     "section-changes-to-your-privacy-policy-header": "Aviso de Cambios",
     "section-changes-to-your-privacy-policy-p1": "Nos reservamos el derecho de hacer cambios a esta Política de Privacidad en cualquier momento. Le notificaremos cualquier cambio material publicando la Política de Privacidad actualizada en nuestro sitio web. Su uso continuado de nuestro sitio web después de dichos cambios constituye su aceptación de la Política de Privacidad revisada.",
     "section-contact-us-header": "Contáctenos",
-    "section-content-us-p1": "Si tiene alguna pregunta sobre esta Política de Privacidad o nuestras prácticas, contáctenos."
+    "section-contact-us-p1": "Si tiene alguna pregunta sobre esta Política de Privacidad o nuestras prácticas, contáctenos."
   },
   "content-page": {
     "sidebar-heading-text": "Navegación",
