--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -56,7 +56,7 @@
   },
   "privacy-page": {
     "sidebar-heading-text": "Navigation",
-    "main-privacy-heading": "Our Story",
+    "main-privacy-heading": "Privacy Policy",
     "section-privacy-intro-header": "Terms Consent",
     "section-privacy-intro-p1": "At MyWebClass, we are committed to protecting the privacy of our users. This Privacy Policy explains\n how we collect, use, and protect your personal information. By using our website, you consent to the\n terms of this Privacy Policy.",
     "section-privacy-information-we-collect-header": "Info Collected",
