--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -56,7 +56,7 @@
   },
   "privacy-page": {
     "sidebar-heading-text": "Navegación",
-    "main-privacy-heading": "Nuestra Historia",
+    "main-privacy-heading": "Política de Privacidad",
     "section-privacy-intro-header": "Consentimiento de Términos",
     "section-privacy-intro-p1": "En MyWebClass, estamos comprometidos a proteger la privacidad de nuestros usuarios. Esta Política de Privacidad explica cómo recopilamos, usamos y protegemos su información personal. Al usar nuestro sitio web, usted acepta los términos de esta Política de Privacidad.",
     "section-privacy-information-we-collect-header": "Información Recopilada",
